completed mobile view

--- a/index.html
+++ b/index.html
@@ -248,9 +248,35 @@
       </div>
     </div>
 
-    <div class="footer mt-5">
-      <div class="contact-mail">
-          <a class="mail-text" href="#"><i class="fa-solid fa-envelope" style="color: #b70c1c;"></i> hello@madchef.com.bd</a>
+    <div class="footer mt-5 pb-5">
+      <div class="container">
+        <div class="contact-mail">
+            <a class="mail-text" href="#"><i class="fa-solid fa-envelope" style="color: #b70c1c;"></i> hello@madchef.com.bd</a>
+        </div>
+      </div>
+      <div class="mt-5 container text-center text-white">
+        <h5 style="font-weight: 600;">Stay Connected</h5>
+        <div class="font">
+          <i style="margin: 2%;" class="in fa-brands fa-facebook"></i>
+          <i style="margin: 2%;" class="in fa-brands fa-instagram"></i>
+          <i style="margin: 2%;" class="in fa-brands fa-x-twitter"></i>
+          <i style="margin: 2%;" class="in fa-brands fa-tiktok"></i>
+          <i style="margin: 2%;" class="in fa-brands fa-youtube"></i>
+        </div>
+        <div class="logo mt-5">
+          <img src="https://madchef.com.bd/photo/site_setting/settingsfooterlogo62411384.svg" width="250px">
+        </div>
+        <div class="venturs mt-5">
+          <h6>Our Ventures</h6>
+          <div class="venture-logo">
+            <img src="https://madchef.com.bd/frontend_assets/img/home/venture_pagla_baburchi.png" alt="" width="50px">
+            <img src="https://madchef.com.bd/frontend_assets/img/home/venture_cheez.png" alt="" width="50px" style="margin-left: 3%;">
+          </div>
+        </div>
+        <hr style="opacity: 1;">
+        <div class="creator">
+          <p>Created by Mahamudul Hasan</p>
+        </div>
       </div>
     </div>
     
