fixed tablet view

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -98,8 +99,8 @@
         <p class="txt">Download Menu <i class="fa-solid fa-angles-right" style="color: #b70c1c;"></i></p>
         </div>
 
-        <div class="menu-contents d-flex flex-column"> 
-          <div class="menu-items">
+        <div class="menu-contents d-flex mt-5"> 
+          <div class="menu-items mx-auto">
             <li class="menu-link">french fries</li>
             <li class="menu-link">french fries</li>
             <li class="menu-link">french fries</li>
